Add customized bblayer, local.conf and common targets
As first step in creating a Bash Script to interactive
compile meta-axxia (for final users) - A0164, we add
customized bblayer and local.conf and common targets.

By sourcing poky/meta-axxia/axxia-env, TEMPLATECONF
variable will not point anymore to meta-poky templates
but will point to our customized ones from meta-axxia/conf.

That way, on sourcing poky/oe-init-build-env to create the
build setup, axxia common targets will be shown and customized
bblayer and local.conf will be populated in build directory.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/README
+++ b/README
@@ -155,6 +155,7 @@ device-tree-compiler (dtc)
    type. For example, we will use axxia.
 
    $ cd $YOCTO
+   $ source poky/meta-axxia/axxia-env
    $ source poky/oe-init-build-env axxia
 
 7. Edit the conf/bblayers.conf file
